--- a/index.html
+++ b/index.html
@@ -10,12 +10,10 @@
    </head>
    <body>
       <h1>
-         <a href="https://en.wikipedia.org/wiki/The_Road_Not_Taken" target="_blank">
-            The Road Not Taken</a
-         >
+         <a href="https://en.wikipedia.org/wiki/The_Road_Not_Taken" target="_blank">The Road Not Taken</a>
       </h1>
       <h2>
-         <a href="https://en.wikipedia.org/wiki/Robert_Frost" target="_blank">Robert Frost</a>
+         <a href="https://en.wikipedia.org/wiki/Robert_Frost" target="_blank">By: Robert Frost</a>
       </h2>
       <p>
          Two roads diverged in a yellow wood,<br />
